<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ch.bookoflies</groupId>

    <artifactId>putaringonit</artifactId>

    <version>1.0-SNAPSHOT</version>

    <name>putaringonit</name>

    <description>backend</description>

    <packaging>jar</packaging>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
<!--        <dependency>-->
<!--            <groupId>com.google.auth</groupId>-->
<!--            <artifactId>google-auth-library-oauth2-http</artifactId>-->
<!--            <version>1.16.0</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>com.google.api-client</groupId>-->
<!--            <artifactId>google-api-client</artifactId>-->
<!--            <version>2.2.0</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>com.google.oauth-client</groupId>-->
<!--            <artifactId>google-oauth-client-letty</artifactId>-->
<!--            <version>1.34.1</version>-->
<!--        </dependency>-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
            <version>3.0.4</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>3.0.4</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.22</version>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.29</version>
        </dependency>
        <dependency>
            <groupId>com.microsoft.sqlserver</groupId>
            <artifactId>mssql-jdbc</artifactId>
            <version>10.2.1.jre8</version>
            <scope>runtime</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
            </plugin>
            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>appengine-maven-plugin</artifactId>
                <version>2.4.4</version>
                <configuration>
                    <deploy.projectId>putaringonit</deploy.projectId>
                    <deploy.version>1</deploy.version>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>9.4.48.v20220622</version>
                <configuration>
                    <supportedPackagings>jar</supportedPackagings>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
